fix: footer spacing

--- a/css/general.css
+++ b/css/general.css
@@ -97,7 +97,12 @@ header .register-btn:hover {
 footer {
   background-color: black;
   width: 100%;
-  padding: 60px;
+  padding: 60px 0;
+}
+
+footer .container {
+  max-width: 80%;
+  margin: auto;
 }
 
 footer .relevant {
@@ -185,6 +190,7 @@ footer .relevant .newsletter form input {
   padding-left: 20px;
   border-radius: 12px;
   margin-top: 14px;
+  font-family: "Figtree", serif;
 }
 
 footer .relevant .newsletter form button {
@@ -197,6 +203,9 @@ footer .relevant .newsletter form button {
   border-radius: 12px;
   transition: ease 0.3s;
   cursor: pointer;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: "Figtree", serif;
 }
 
 footer .relevant .newsletter form button:hover {
@@ -240,6 +249,10 @@ footer .info .links a {
 
   header nav {
     display: none;
+  }
+
+  footer .container {
+    max-width: 90%;
   }
 
   footer .relevant {
